 • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)
 • Arm Missile Ship damages increased 800 -> 900 (damages vs commanders unchanged)

Other:
 • Added option "Move Window Position"
 • Added option: resolution selection (doesnt always work in fullscreen mode)
 • Added option "Contain mouse inside window"
 • Player camara tracking also limits view to players viewpoint and losmode
 • Top bar: when low energy: red background, when overflowing: resource colored
 • Advplayerlist can auto collapse, availible in options: Interface -> "Playerlist auto collapses"
 • Reduces size of air thrusters overall and they dont show when plane is crashing
 • Added lups thrusters to armatlas/corvalk/banshee
 • Options widget remembers/restores some spring config settings
 • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
 • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'

Fixes:
 • Closing game when loaded unsupported AI (supported: DAI, KAIK, NullAI, Chickens)
 • Fixed DAI echospam + working with multiple DAI bots + behavior improvements
 • Changed Decoy com attacked warning sound to a regular unit under attack sound
 • Fixed "map edge extension" not always showing up when it should
 • Fixed "States Prefs" widget overriding config table with empty table after loading a replay
 • Fixed Bloom rendering the map black on certain maps

Removed:
 • Removed "GroupMove" widget because it had side effects/downsides
 • Removed old console and old ally resource bars widget
 • Removed modoptions: "Control Victory", "firethroughfriendly", "smallfeaturenoblock", "reclaimunitefficiency", "mm_diminish_factor", "enemycomcount", "no_close_spawns", "heatmap"


10.10 -> 10.11
23/07/2018

Balance changes:
 • Decreased Core Supporter (corvette) metal cost from 165 to 160.
 • Liche: -5% maxSpeed, +5% energy cost, +2.5% buildTime, damages to commanders 3150 (vs 3350)

Other: